<resources>
    <string name="app_name">Ratify</string>
    <string name="nav_home">Home</string>
    <string name="nav_join">Join</string>
    <string name="nav_create">Create</string>
    <string name="nav_info">Info</string>

    <string name="sign_in_message">Sign in to get started!</string>

    <string name="join_code_placeholder">Enter Code</string>

    <string name="create_group_name_hint">Group Name</string>
    <string name="create_group_name_description">Description</string>
    <string name="create_group_results_label">Max Results</string>
    <string name="create_group_create_btn_text">Create</string>
    <string name="create_group_preview_btn_text">Preview</string>
    <string name="create_group_activity_hint">Activity (Dinner? Lunch? Drinks?)</string>
    <string name="create_group_vote_conclusion">RSVP Date</string>
    <string name="create_group_vote_expiration">Days After RSVP to Expire</string>

    <string name="match_image_description">Match Image</string>

    <string name="results">Results</string>

    <string name="middle_dot">&#183;</string>

    <string name="no_groups_message">You are not a part of any groups!\n\nUse the buttons below to join or create a group</string>

    <string name="yelp_powered_by">Results provided by Yelp</string>

    <string name="info_message">If you have any questions or comments, feel free to <a href="mailto:matt.lavallee.dev@gmail.com">email us</a>\n\nView our <a href="https://github.com/mattlavallee/ratify/blob/master/privacy_policy.md">Privacy Policy</a></string>
</resources>
