<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:background="@drawable/button_ripple"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/navigation_join"
        android:icon="@drawable/ic_group_black_24dp"
        android:background="@drawable/button_ripple"
        android:title="@string/nav_join" />

    <item
        android:id="@+id/navigation_create"
        android:icon="@drawable/ic_add_box_black_24dp"
        android:background="@drawable/button_ripple"
        android:title="@string/nav_create" />

    <item
        android:id="@+id/navigation_info"
        android:icon="@drawable/ic_info_outline_black_24dp"
        android:background="@drawable/button_ripple"
        android:title="@string/nav_info" />

</menu>
